--- a/tcc/capitulos/capitulo2.tex
+++ b/tcc/capitulos/capitulo2.tex
@@ -227,24 +227,11 @@ classificação da palavra ``um''. Por exemplo, considerando-se um
 \textit{training set} hipotético com as seguintes características:
 
 \begin{itemize}
-  \item 10000 substantivos.
-  \begin{itemize}
-	\item 150 são a palavra ``um''.
-	\item 10 são a palavra ``João''.
-	\item 50 são a palavra ``carro''.
-  \end{itemize}
-  \item 20000 artigos.
-  \begin{itemize}
-    \item 500 são a palavra ``um''.
-  \end{itemize}
-  \item 12000 verbos
-  \begin{itemize}
-    \item 50 são a palavra ``comprou''.
-  \end{itemize} 
-  \item 15000 pronomes.
-  \begin{itemize}
-    \item 50 são a palavra ``um''.
-  \end{itemize} 
+  \item 10000 substantivos, onde 150 são a palavra ``um'', 10 são a palavra
+  ``João'' e 50 são a palavra ``carro''.
+  \item 20000 artigos, onde 500 são a palavra ``um''.
+  \item 12000 verbos, onde 50 são a palavra ``comprou''.
+  \item 15000 pronomes, onde 50 são a palavra ``um''.
 \end{itemize}
 
 Neste caso, a probabilidade da palavra
